# research_mDeBERTa-v3-base-mnli-xnli

./: .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  QUANTIZATION_PLAN_1.md  QUANTIZATION_PLAN_2.md  QUANTIZATION_PLAN_3.md  QUANTIZATION_RECOMMENDATION_1.md  QUANTIZATION_REPLICATION.md  QUANTIZATION_REPORT_1.md  QUANTIZATION_REPORT_2.md  QUANTIZATION_REPORT_5.md  QUANTIZATION_REPORT_6.md  QUANTIZATION_RESEARCH_CONCLUSION.md
cmake/: absl-compat-config.cmake.in
research/attempt0/: QUANTIZATION_PLAN_3.md  QUANTIZATION_RECOMMENDATION_1.md  QUANTIZATION_REPORT_3.md  QUANTIZATION_REPORT_4.md  QUANTIZATION_REPORT_6.md  QUANTIZATION_REPORT_7.md
research/attempt1/: conclusion.md  initial_review.md  plan1.md  plan2.md  plan3.md  plan4.md  result1.md  result2.md  result3.md
research/attempt2_course-correction/: 0init_memory.md  0init_overfitting.md  0init_storage.md  conclusion.md  plan0.md  plan1.md  result0.md  result1.md  study_quantization_catalog.json  study_quantization_catalog_plan1.json
research/attempt3_coreml/: plan0.md  result0.md  study_quantization_catalog.json
research/attempt4_cpu-focus/: plan1.md  plan2.md  result0.md  result1.md  review.md  study_quantization_catalog.json
research/attempt5_coreml-focus/: plan0.md  plan1.md  plan2.md  result0.md  study_quantization_catalog.json
research/final/: datasets.md  quantizations.md  replication.md  summary.md  trivia.md  winning-candidate-cpu.md
src/: command_line.cpp  command_line.h  eval_main.cpp  main.cpp  nli_eval.cpp  nli_eval.h  nli_inference.cpp  nli_inference.h  process_memory.cpp  process_memory.h  runtime_bench_main.cpp  session_factory.cpp  session_factory.h  sha256.cpp  sha256.h  study_command_line.cpp  study_command_line.h  study_main.cpp  study_types.h  study_workflow.cpp  study_workflow.h  tokenizer_assets.cpp  tokenizer_assets.h  tokenizer_utils.cpp  tokenizer_utils.h  topical_chat.cpp  topical_chat.h  topical_chat_main.cpp
tests/: session_factory_test.cpp  study_test.cpp  topical_chat_test.cpp
tests/data/: fake_generator.py  nli_eval_fixture.tsv  topical_chat_fixture.json
tests/data/tokenizer_assets_fixture/: special_tokens_map.json  tokenizer.json  tokenizer_config.json
tests/python/: test_build_attempt4_cpu_report.py  test_download_nli_eval_slices.py  test_download_study_assets.py  test_prepare_study_plan1_datasets.py  test_replication_cpu_final.py  test_replication_cpu_final_benchmark.py  test_study_catalog.py  test_summarize_study_db.py
tools/: benchmark-hf-onnx-models.py  benchmark-nli-models.sh  benchmark-nli-runtime.py  build-attempt1-zh-eval-pack.py  build-attempt1-zh-stress-pack.py  build-attempt4-cpu-report.py  build-attempt5-coreml-report.py  build-hf-core-probe.py  build-hf-probe-set.py  build-quantization-dashboard.py  build.sh  compare-hf-onnx-logits.py  compare-hf-tokenizer.py  convert-onnx-to-fp16.py  debug-onnx-quantization.py  download-mdeberta-v3-base.sh  download-nli-eval-slices.py  download-study-assets.py  inspect-onnx-model.py  inspect-tokenizer-assets.py  install.sh  legacy-debug-onnx-quantization-3339662.sh  legacy-search-onnx-quantization-families-8369b92.sh  mdeberta_onnx_quantization.py  prepare-attempt1-quantization-data.py  prepare-attempt4-cpu-datasets.py  prepare-study-plan1-datasets.py  quantize-onnx-model.py  quantize-onnx-nncf.py  quantize-onnx-static.py  recover-mdeberta-qat.py  replication_cpu_final.py  run-attempt3-coreml-plan0.py  run-attempt4-cpu-study.py  run-attempt5-coreml-study.py  run_bench_1.sh  search-onnx-quantization-attempt1.py  search-onnx-quantization-families.py  setup.sh  stage-study-artifact.py  (+4 more)
